# mypi

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs
ci/: before_deploy.ps1  before_deploy.sh
src/: cli.rs  errors.rs  main.rs
